CVS code -
- General:
	- Translation updates (see po/ChangeLog for details).
- nano.c:
  main()
	- Don't call open_file with quiet flag set.  Fixes Debian bug 
	  #246956 (no warning when trying to open non-readable file).

GNU nano 1.2.3 - 2004.01.17
- General:
	- Translation updates (see po/ChangeLog for details).
	- Make sure the "historylog" option isn't included at all if
	  NANO_SMALL is defined. (DLR)
- files.c:
  read_file()
	- After we've read in a file and possibly converted it from
	  DOS/Mac format, set fileformat back to 0 to prevent erroneous
	  conversion messages when we read other files in. (DLR)
  do_browser()
  	- Allow '?' to open the help browser, for compatibility with
  	  Pico.  Also remove some of the Pico compatibility options in
  	  the file browser that don't work properly for current Pico.
  	  Backspace, 'l', 'q', and 'u' are invalid.  'd' deletes the
  	  highlighted file, and 'r' renames the highlighted file;
  	  neither of these are implemented. (DLR)
- nano.c:
  window_init()
	- If keypad() was TRUE before we pressed Meta-X (as Meta-X
  	  apparently turns it off under both ncurses and PDCurses), set
  	  it to TRUE afterwards. (DLR)
  do_suspend()
        - Use handle_hupterm() to handle SIGHUP and SIGTERM so we can
          properly deal with them while nano is suspended. (DLR; problem
          found by David Benbennick)
- proto.h:
	- Surround the do_prev_word() and do_next_word() prototypes with
	  NANO_SMALL #ifdefs, since the actual functions aren't included
	  in tiny mode. (DLR)
- search.c:
  findnextstr(), do_replace_loop()
	- Fix potential infinite loops and other misbehavior when doing
	  beginning-of-line or end-of-line regex replacements ("^", "$",
	  and "^$").  Add a no_sameline parameter to findnextstr(), and
	  set it in the calls in do_replace_loop() when such regexes are
	  found, so that such regexes are only found once per line.
	  Also change length_change from a long to an int; size_t is